--- a/css/stayles.css
+++ b/css/stayles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2? family= Roboto+Slab:wght@100 & display=swap');
-@import url('https://fonts.googleapis.com/css2? family= Roboto+Slab:wght@100 & display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -26,6 +24,7 @@ main{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    
 
 }
 section{
@@ -70,4 +69,72 @@ ul li a {
 ul li a :active,
 ul li a:hover{
     background:#ff6e00 ;
+}
+
+
+                                                                                  /*--- Main bölümü---*/
+section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left:  10rem;
+    margin-right: 10rem;
+}
+
+/*article bölgesi*/
+.left{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+}
+.left > h3{font-size: 60px;}
+.left > div > p{font-size: 20px;}
+
+article > H2{
+    font-size: 60px;
+}
+
+.lets{
+    font-size: 17px;
+    color: #FFB800;
+}
+article{
+    size: 65px;
+    
+}
+
+.image-A{
+    width: 40%;
+    height: auto;
+}
+
+                                                                                  /*---footer bölümü---*/
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 3rem;
+}
+footer > div{
+    background-color: #F4F0F0;
+    border-radius: 20px;
+    padding: 1rem;
+}
+footer > div > a{
+    color: azure;
+    background-color: black;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 0.5rem;
+    border-radius: 10px;
+}
+footer > div > h5{font-size: 18px; text-transform: uppercase;}
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape){
+    /* STYLES GO HERE */
 }
